[package]
name = "rust-plus-htmx-playground"
version = "0.1.0"
edition = "2021"
authors = ["Mike Moolenaar <mmoolenaar9@gmail.com>"]
repository = "https://github.com/MikeMoolenaar/RATH-stack"

[dependencies]
axum = { version = "0.7.9", features = ["form", "macros"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs","set-header"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
dotenv = "0.15.0"
tower = "0.5.1"
tower_governor = "0.4.3"
tower-sessions = "0.13.0"
tower-sessions-libsql-store = "0.3.0"
tower-livereload = "0.9.4"
minijinja = { version = "2.5.0", features = ["loader", "v_htmlescape", "multi_template"] }
axum-htmx = "0.6.0"
argon2 = "0.5.3"
time = "0.3.36"
libsql = "0.6.0"
html-minifier = "5.0.0"
